Thu Sep  4 20:50:20 CEST 2003
-----------------------------
  * libclamav: mbox: fix for OE messages (Nigel)

Mon Sep  1 21:45:48 CEST 2003
-----------------------------
  * clamav.rulez.pl and clamav.linux-sxs.org removed from mirrors.txt
    (thanks to Tomasz Papszun and Benjamin Zwittnig for checking them)

Mon Sep  1 21:33:25 CEST 2003
-----------------------------
  * libclamav: fixed zziplib compilation error under OS/X (Nigel)
  * libclamav: mbox cosmetic fix

Sat Aug 30 21:25:25 CEST 2003
-----------------------------
  * libclamav: mbox code update - should be more stable (Nigel)
  * clamav.conf: RemoveStaleSocket -> FixStaleSocket

Fri Aug 29 06:00:01 CEST 2003
-----------------------------
  * clamav-milter: 0.60d: Removed superflous buffer and unneeded strerror
		   call (Nigel)
  * libclamav: enabled support for Maildir files (thanks to Tomasz Papszun
	       for samples and to Nigel for making his code so flexible)
  * libclamav: fixed memory leak (Nigel)

Wed Aug 27 23:25:52 CEST 2003
-----------------------------
  * libclamav: message.c/h - allow any number of arguments to mime
	       commands (Nigel)
  * libclamav: mbox - parseMimeHeader() potential memory problem fixed (Nigel)
  * clamd, clamscan: removed duplicated rndnum() and switched to cl_rndnum()
  * clamd: new directive FixStaleSocket by Thomas Lamy and Mark Mielke

Sat Aug 23 21:17:33 CEST 2003
-----------------------------
  * freshclam: fixed --on-error-execute (don't run a command on "no update"
	       event). Fixed by David Woakes.

Wed Aug 20 02:30:37 CEST 2003
-----------------------------
  * libclamav: mbox - support for "raw" messages (Nigel)
  * sigtool: fixed a segmentation fault when a signature reaches end
	     of file (thanks to Tomasz Papszun for an example)

Tue Aug 19 02:33:48 CEST 2003
-----------------------------
  * clamav-milter: 0.60b - support for CC bounces to an e-mail address other
		   than. Now compiles out of the box on FreeBSD 4.x (Nigel)