@@ -1,3 +1,7 @@
+Fri Sep  5 15:09:58 CEST 2003
+-----------------------------
+  * clamd: crash gently
+
 Thu Sep  4 20:50:20 CEST 2003
 -----------------------------
   * libclamav: mbox: fix for OE messages (Nigel)
